Fix valid icon hidden behind scrollbar on mobile
Fix #41

--- a/resources/app/src/assets/scss/components/_form.scss
+++ b/resources/app/src/assets/scss/components/_form.scss
@@ -56,4 +56,8 @@
       @extend .is-invalid;
     }
   }
+
+  textarea.form-control.is-valid {
+    background-position: top calc(0.3em + 0.1875rem) right calc(0.3em + 0.1875rem + 1rem);
+  }
 }
